--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        mlModelBinding true
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
