--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
         android:theme="@style/Theme.Meater"
         android:usesCleartextTraffic="true">
         <activity android:name=".ui.ResultActivity"></activity>
-        <activity android:name=".ui.CameraActivity" />
+        <activity android:name=".ui.CameraActivity"
+            android:theme="@style/Theme.Meater.NoActionBar"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
