--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,10 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glideVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofit2Version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit2Version"
+    implementation "org.tensorflow:tensorflow-lite-support:0.1.0-rc1"
+    implementation "org.tensorflow:tensorflow-lite-metadata:0.1.0-rc2"
+    implementation "org.tensorflow:tensorflow-lite:2.5.0"
+
 
     //Testing
     testImplementation 'junit:junit:4.+'
